--- a/dev_tinder_ui/Dockerfile
+++ b/dev_tinder_ui/Dockerfile
@@ -17,7 +17,10 @@ ENV NODE_ENV development
 WORKDIR /usr/src/app
 
 COPY package*.json ./
-RUN npm install
+RUN --mount=type=bind,source=package.json,target=package.json \
+    --mount=type=bind,source=package-lock.json,target=package-lock.json \
+    --mount=type=cache,target=/root/.npm \
+    npm ci
 # Download dependencies as a separate step to take advantage of Docker's caching.
 # Leverage a cache mount to /root/.npm to speed up subsequent builds.
 # Leverage a bind mounts to package.json and package-lock.json to avoid having to copy them into
