--- a/dev_tinder_backend/Dockerfile
+++ b/dev_tinder_backend/Dockerfile
@@ -1,33 +1,24 @@
 # syntax=docker/dockerfile:1
 
-
-
 ARG NODE_VERSION=20.19.0
-
 FROM node:${NODE_VERSION}-alpine
 
-# Use production node environment by default.
-ENV NODE_ENV development
-
+ENV NODE_ENV=production
 
 WORKDIR /usr/src/app
 
-# Download dependencies as a separate step to take advantage of Docker's caching.
-# Leverage a cache mount to /root/.npm to speed up subsequent builds.
-# Leverage a bind mounts to package.json and package-lock.json to avoid having to copy them into
-# into this layer.
-RUN --mount=type=bind,source=package.json,target=package.json \
-    --mount=type=bind,source=package-lock.json,target=package-lock.json \
-    --mount=type=cache,target=/root/.npm 
+# Copy package.json and package-lock.json first
+COPY package*.json ./
 
-# Run the application as a non-root user.
-USER node
+# Install dependencies
+RUN npm ci --only=production
 
-# Copy the rest of the source files into the image.
+# Copy the rest of the source files
 COPY . .
 
-# Expose the port that the application listens on.
+# Run as non-root user
+USER node
+
 EXPOSE 5001
 
-# Run the application.
 CMD ["node", "index.js"]
